Unavailable products added to customer summary message